--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 /* フィルターパネルのコンテナ */
 .filter-panel-container {
   position: absolute;
-  top: 10px;
+  top: 30px;
   left: 10px;
   z-index: 10;
   background-color: rgba(255, 255, 255, 0.9);
@@ -77,8 +77,23 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
+  background-image: url('/src/assets/images/row1.png'); /* 背景画像を設定 */
+  background-size: contain; /* 画像をコンテナに合わせて拡大縮小 */
+  background-repeat: no-repeat; /* 画像を繰り返さない */
+  background-position: center; /* 画像を中央に配置 */
+  z-index: 1000; /* 他の要素の上に表示 */
+  transition: opacity 1s ease-out; /* フェードアウトのトランジション */
+}
+
+.loading-fallback.hidden {
+  opacity: 0;
+  pointer-events: none; /* フェードアウト後にクリックを無効化 */
 }
 
 .loading-content {
@@ -173,7 +188,10 @@
 /* InfoWindowのスタイル */
 .info-window {
   font-family: Arial, sans-serif;
-  max-width: 300px;
+  max-width: 250px;
+  position: absolute; /* 追加 */
+  left: 10px; /* 追加 */
+  top: 300px; /* 追加 */
 }
 
 .info-header {
@@ -227,8 +245,6 @@
   text-align: center;
   background-color: #007bff;
   color: #fff;
-  padding: 10px;
-  border-radius: 5px;
   text-decoration: none;
 }
 
@@ -244,7 +260,6 @@
 
 .info-horizontal .info-section {
   flex: 1 1 45%; /* 各セクションを45%の幅で表示 */
-  margin: 5px;
 }
 
 /* Markerのスタイル */
