--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@
 }
 
 .filter-details .area-name {
-  max-width: 80px; /* 「おすすめ」に合わせた幅 */
+  max-width: 100px;
   position: relative;
 }
 
@@ -192,7 +192,7 @@
   position: absolute;
   left: 10px;
   top: 350px;
-  max-height: 400px; /* 高さを制限 */
+  max-height: 500px; /* 高さを制限 */
   overflow-y: auto; /* 縦方向のスクロールを有効にする */
 }
 
