--- a/src/components/infowindow/InfoWindow.css
+++ b/src/components/infowindow/InfoWindow.css
@@ -5,8 +5,8 @@
   position: absolute;
   left: 10px;
   top: 350px;
-  max-height: 500px; /* 高さを制限 */
-  overflow-y: auto; /* 縦方向のスクロールを有効にする */
+  max-height: 500px;
+  overflow-y: auto;
 }
 
 .info-header {
@@ -74,14 +74,14 @@
 }
 
 .info-horizontal .info-section {
-  flex: 1 1 45%; /* 各セクションを45%の幅で表示 */
+  flex: 1 1 45%;
 }
 
 /* URL表示やエリア表示のスタイル */
 .info-section p,
 .info-section a {
-  white-space: nowrap; /* テキストを1行にする */
-  overflow: hidden; /* はみ出した部分を隠す */
-  text-overflow: ellipsis; /* 省略記号を表示 */
-  max-width: 200px; /* 必要に応じて最大幅を設定 */
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 200px;
 }
