--- a/src/components/loadingfallback/LoadingFallback.css
+++ b/src/components/loadingfallback/LoadingFallback.css
@@ -9,17 +9,17 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-  background-image: url('/src/assets/images/row1.png'); /* 背景画像を設定 */
-  background-size: contain; /* 画像をコンテナに合わせて拡大縮小 */
-  background-repeat: no-repeat; /* 画像を繰り返さない */
-  background-position: center; /* 画像を中央に配置 */
-  z-index: 1000; /* 他の要素の上に表示 */
-  transition: opacity 2s ease-out; /* フェードアウトのトランジション */
+  background-image: url('/src/utils/images/row1.png'); 
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1000;
+  transition: opacity 2s ease-out;
 }
 
 .loading-fallback.hidden {
   opacity: 0;
-  pointer-events: none; /* フェードアウト後にクリックを無効化 */
+  pointer-events: none;
 }
 
 .loading-content {
