--- a/src/components/feedbackform/FeedbackForm.css
+++ b/src/components/feedbackform/FeedbackForm.css
@@ -6,16 +6,10 @@
 }
 
 .feedback-panel {
-  position: absolute;
-  top: 30px;
-  left: 10px;
-  z-index: 10;
-  background-color: rgba(255, 255, 255, 0.9);
   padding: 20px;
+  background-color: rgba(255, 255, 255, 0.9);
   border-radius: 8px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-  max-width: 400px;
-  width: calc(100% - 20px);
 }
 
 .feedback-form {
@@ -50,6 +44,7 @@
   font-size: 14px;
   color: #333;
   transition: border-color 0.3s;
+  box-sizing: border-box; /* 追加: パディングとボーダーを含めた幅を設定 */
 }
 
 .form-group textarea:focus,
@@ -77,26 +72,4 @@
 
 .feedback-form button:hover {
   background-color: #0056b3;
-}
-
-/* フィードバックボタンのスタイルを他のボタンと統一 */
-.feedback-button {
-  padding: 5px 10px;
-  font-size: 14px;
-  color: #fff;
-  background-color: #007bff;
-  border: none;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-.feedback-button:hover {
-  background-color: #0056b3;
-}
-
-/* ボタンがアクティブなときのスタイル */
-.common-button.active {
-  width: calc(100% - 20px);
-  height: 50px;
-  font-size: 16px;
 }
