--- a/src/components/loadingfallback/LoadingFallback.css
+++ b/src/components/loadingfallback/LoadingFallback.css
@@ -9,7 +9,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.8);
-  background-image: url('/src/utils/images/row1.png'); 
+  background-image: url('/src/utils/images/row1.png');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
@@ -48,4 +48,17 @@
 .loading-content p {
   font-size: 16px;
   color: #333;
+}
+
+/* レスポンシブデザイン */
+@media (max-width: 768px) {
+  .loading-spinner {
+    width: 30px;
+    height: 30px;
+    border-width: 3px;
+  }
+
+  .loading-content p {
+    font-size: 14px;
+  }
 }
