--- a/src/components/hamburgermenu/HamburgerMenu.css
+++ b/src/components/hamburgermenu/HamburgerMenu.css
@@ -19,7 +19,7 @@
 .hamburger-icon .bar {
   width: 100%;
   height: 5px;
-  background-color: #333;
+  background-color: #f8f8f8;
   transition: all 0.3s;
 }
 
