--- a/src/App.css
+++ b/src/App.css
@@ -22,21 +22,6 @@
   height: 100%; /* 高さを100%に設定 */
 }
 
-/* 共通ボタンスタイル */
-.common-button {
-  background-color: #007bff; /* 背景色を設定 */
-  color: #fff; /* 文字色を設定 */
-  border: none; /* ボーダーをなしに設定 */
-  padding: 10px 20px; /* 内側の余白を設定 */
-  border-radius: 5px; /* 角を丸くする */
-  cursor: pointer; /* カーソルをポインタに設定 */
-  transition: background-color 0.3s ease; /* 背景色のトランジションを設定 */
-}
-
-.common-button:hover {
-  background-color: #0056b3; /* ホバー時の背景色を設定 */
-}
-
 /* 初期レンダリングのバックグラウンドイメージ */
 .initial-background {
   position: fixed; /* 固定位置を設定 */
@@ -48,12 +33,22 @@
   background-size: contain; /* 背景サイズを設定 */
   background-repeat: no-repeat; /* 背景の繰り返しをなしに設定 */
   background-position: center; /* 背景の位置を中央に設定 */
-  background-color: transparent; /* 背景色を透明に設定 */
   z-index: 1000; /* Zインデックスを設定 */
-  transition: opacity 3s ease-out; /* フェードアウトのトランジションを3秒に設定 */
+  transition: opacity 1s ease-out; /* フェードアウトのトランジションを1秒に設定 */
 }
 
 .initial-background.hidden {
   opacity: 0; /* 不透明度を0に設定 */
   pointer-events: none; /* ポインターイベントを無効に設定 */
+}
+
+/* メディアクエリを追加してレスポンシブデザインを強化 */
+@media (max-width: 768px) {
+  .app-container {
+    height: auto; /* 高さを自動に設定 */
+  }
+
+  .map-container {
+    height: 50vh; /* 高さをビューポートの50%に設定 */
+  }
 }
