--- a/src/App.css
+++ b/src/App.css
@@ -46,9 +46,17 @@
 @media (max-width: 768px) {
   .app-container {
     height: auto; /* 高さを自動に設定 */
+    width: 100%; /* 幅を100%に設定 */
   }
 
   .map-container {
-    height: 50vh; /* 高さをビューポートの50%に設定 */
+    position: relative; /* 相対位置を設定 */
+    height: 100vh; /* 高さをビューポートの100%に設定 */
+    width: 100%; /* 幅を100%に設定 */
+  }
+
+  .map-container > div {
+    width: 100%; /* 幅を100%に設定 */
+    height: 100%; /* 高さを100%に設定 */
   }
 }
