スタイルのコメントを整理し、LoadingFallbackコンポーネントのローディング時間を5秒から2秒に短縮しました。また、HamburgerMenuコンポーネントのプロパティの型定義を整理しました。

--- a/src/components/infowindow/InfoWindow.css
+++ b/src/components/infowindow/InfoWindow.css
@@ -52,12 +52,9 @@
 }
 
 .info-section ul {
-  padding-left: 0;
-  /* 左のパディングをリセット */
-  margin: 0;
-  /* マージンをリセット */
-  list-style-type: none;
-  /* リストスタイルをなしに設定 */
+  padding-left: 0; /* 左のパディングをリセット */
+  margin: 0; /* マージンをリセット */
+  list-style-type: none; /* リストスタイルをなしに設定 */
 }
 
 .info-business-hours,
