--- a/src/App.css
+++ b/src/App.css
@@ -1,62 +1,62 @@
 /* アプリ全体のコンテナ */
 .app-container {
-  position: relative; /* 相対位置を設定 */
-  width: 100%; /* 幅を100%に設定 */
-  height: 100vh; /* 高さをビューポートの高さに設定 */
-  overflow: hidden; /* オーバーフローを隠す */
-  background-color: #f8f9fa; /* 背景色を設定 */
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+  background-color: #f8f9fa;
 }
 
 /* マップコンテナ */
 .map-container {
-  position: absolute; /* 絶対位置を設定 */
-  top: 0; /* 上からの位置を設定 */
-  left: 0; /* 左からの位置を設定 */
-  width: 100%; /* 幅を100%に設定 */
-  height: 100%; /* 高さを100%に設定 */
-  z-index: 0; /* Zインデックスを設定 */
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .map-container > div {
-  width: 100%; /* 幅を100%に設定 */
-  height: 100%; /* 高さを100%に設定 */
+  width: 100%;
+  height: 100%;
 }
 
 /* 初期レンダリングのバックグラウンドイメージ */
 .initial-background {
-  position: fixed; /* 固定位置を設定 */
-  top: 0; /* 上からの位置を設定 */
-  left: 0; /* 左からの位置を設定 */
-  width: 100%; /* 幅を100%に設定 */
-  height: 100%; /* 高さを100%に設定 */
-  background-image: url('/src/utils/images/row1.png'); /* 背景画像を設定 */
-  background-size: contain; /* 背景サイズを設定 */
-  background-repeat: no-repeat; /* 背景の繰り返しをなしに設定 */
-  background-position: center; /* 背景の位置を中央に設定 */
-  z-index: 1000; /* Zインデックスを設定 */
-  transition: opacity 1s ease-out; /* フェードアウトのトランジションを1秒に設定 */
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/src/utils/images/row1.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  z-index: 1000;
+  transition: opacity 1s ease-out;
 }
 
 .initial-background.hidden {
-  opacity: 0; /* 不透明度を0に設定 */
-  pointer-events: none; /* ポインターイベントを無効に設定 */
+  opacity: 0;
+  pointer-events: none;
 }
 
 /* メディアクエリを追加してレスポンシブデザインを強化 */
 @media (max-width: 768px) {
   .app-container {
-    height: auto; /* 高さを自動に設定 */
-    width: 100%; /* 幅を100%に設定 */
+    height: auto;
+    width: 100%;
   }
 
   .map-container {
-    position: relative; /* 相対位置を設定 */
-    height: 100vh; /* 高さをビューポートの100%に設定 */
-    width: 100%; /* 幅を100%に設定 */
+    position: relative;
+    height: 100vh;
+    width: 100%;
   }
 
   .map-container > div {
-    width: 100%; /* 幅を100%に設定 */
-    height: 100%; /* 高さを100%に設定 */
+    width: 100%;
+    height: 100%;
   }
 }
