--- a/src/components/filterpanel/FilterPanel.css
+++ b/src/components/filterpanel/FilterPanel.css
@@ -4,16 +4,17 @@
   flex-direction: column; /* 縦方向に配置 */
   gap: 10px; /* 要素間の間隔を設定 */
   transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out; /* トランジションを設定 */
-  transform: translateX(0); /* 初期状態で左に隠す */
+  transform: translateX(-100%); /* 初期状態で左に隠す */
   opacity: 0; /* 初期状態で透明にする */
-  position: absolute; /* 絶対位置を設定 */
-  top: 50px; /* 上からの位置を設定 */
-  left: 55px; /* 左からの位置を設定 */
-  height: calc(100% - 50px); /* 高さを100%から50px引いた値に設定 */
+  position: fixed; /* 固定位置を設定 */
+  top: 0; /* 上に寄せる */
+  left: 0; /* 左に寄せる */
+  height: auto; /* 高さを自動に設定 */
   z-index: 1000; /* Zインデックスを設定 */
 }
 
 .filterpanel-container.open {
+  transform: translateX(0); /* 表示時に左からスライドイン */
   opacity: 1; /* 不透明にする */
 }
 
@@ -129,25 +130,4 @@
 
 /* レスポンシブデザイン */
 @media (max-width: 768px) {
-  .filter-panel {
-    padding: 15px; /* 内側の余白を設定 */
-  }
-
-  .filter-item {
-    margin-bottom: 6px; /* 下部の余白を設定 */
-  }
-
-  .filter-item input[type='checkbox'] + .custom-checkbox {
-    width: 14px; /* 幅を設定 */
-    height: 14px; /* 高さを設定 */
-  }
-
-  .filter-details {
-    margin-left: 6px; /* 左の余白を設定 */
-  }
-
-  .marker-color {
-    width: 14px; /* 幅を設定 */
-    height: 14px; /* 高さを設定 */
-  }
 }
