スタイルの調整：ハンバーガーメニューの背景色を変更し、情報ウィンドウのz-indexを更新しました。また、マップコンポーネントの位置を調整し、フルスクリーンコントロールを無効にしました。

--- a/src/components/hamburgermenu/HamburgerMenu.css
+++ b/src/components/hamburgermenu/HamburgerMenu.css
@@ -19,7 +19,7 @@
 .hamburger-icon .bar {
   width: 100%; /* 幅を100%に設定 */
   height: 5px; /* 高さを設定 */
-  background-color: #f8f8f8; /* 背景色を設定 */
+  background-color: #333; /* 背景色を設定 */
   transition: all 0.3s; /* トランジションを設定 */
 }
 
