--- a/src/components/loadingfallback/LoadingFallback.css
+++ b/src/components/loadingfallback/LoadingFallback.css
@@ -10,7 +10,7 @@
   height: 100%; /* 高さを100%に設定 */
   background-color: transparent; /* 背景色を透明に設定 */
   z-index: 1000; /* Zインデックスを設定 */
-  transition: opacity 2s ease-out; /* フェードアウトのトランジションを調整 */
+  transition: opacity 1s ease-in; /* フェードアウトのトランジションを調整 */
 }
 
 /* ローディングが非表示の場合のスタイル */
