--- a/src/components/filterpanel/FilterPanel.css
+++ b/src/components/filterpanel/FilterPanel.css
@@ -3,7 +3,9 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
-  transition: transform 0.3s ease-in-out, opacity 0.3s ease-in-out;
+  transition:
+    transform 0.3s ease-in-out,
+    opacity 0.3s ease-in-out;
   transform: translateY(-100%);
   opacity: 0;
   position: fixed;
@@ -65,7 +67,7 @@
   display: none;
 }
 
-.filter-item input[type='checkbox']+.custom-checkbox {
+.filter-item input[type='checkbox'] + .custom-checkbox {
   width: 16px;
   height: 16px;
   border: 2px solid #007bff;
@@ -77,11 +79,11 @@
   /* 追加: 幅を固定する */
 }
 
-.filter-item input[type='checkbox']:checked+.custom-checkbox {
+.filter-item input[type='checkbox']:checked + .custom-checkbox {
   background-color: #007bff;
 }
 
-.filter-item input[type='checkbox']:checked+.custom-checkbox::after {
+.filter-item input[type='checkbox']:checked + .custom-checkbox::after {
   content: '';
   position: absolute;
   top: 2px;
