--- a/src/components/searchbar/SearchBar.css
+++ b/src/components/searchbar/SearchBar.css
@@ -4,7 +4,6 @@
   align-items: flex-start;
   margin: 8px;
   width: calc(100% - 15px);
-  /* 親要素の幅に収まるように調整 */
   box-sizing: border-box;
 }
 
@@ -19,7 +18,6 @@
 
 .search-bar button {
   width: 100%;
-  /* ボタンの幅を100%に設定 */
   padding: 8px 16px;
   font-size: 16px;
   border: none;
@@ -27,9 +25,7 @@
   background-color: #007bff;
   color: white;
   cursor: pointer;
-  transition:
-    background-color 0.3s,
-    box-shadow 0.3s;
+  transition: background-color 0.3s, box-shadow 0.3s;
   margin-bottom: 10px;
 }
 
@@ -44,14 +40,4 @@
 .search-bar button:focus {
   outline: none;
   box-shadow: 0 0 0 3px rgba(0, 123, 255, 0.5);
-}
-
-@media (max-width: 600px) {
-  .search-bar {
-    width: 100%;
-  }
-
-  .search-bar button {
-    width: 100%;
-  }
 }
